syntax = "proto3";

package auth;

import "customTypes.proto";

option csharp_namespace = "illidan_Shared";

service AuthService {
	rpc SendCode (SendCodeRequest) returns (customTypes.StandartReply);
	rpc Validate (ValidateRequest) returns (ValidateReply);
}

message SendCodeRequest {
	string Phone = 1;
}

message ValidateRequest{
	string Phone = 1;
	string Code = 2;
}

message ValidateReply{
	string AccessToken = 1;
}