syntax = "proto3";

package queue;

import "customTypes.proto";

option csharp_namespace = "illidan_Shared";

service QueueService {
	rpc CreateQueue (customTypes.Empty) returns (CreateQueueReply);
	rpc GetQueues (customTypes.Empty) returns (GetQueuesReply);
	rpc Enqueue (EnqueueRequest) returns (customTypes.StandartReply);
	rpc Dequeue (DequeueRequest) returns (customTypes.StandartReply);
	rpc GetQueueTokens (GetQueueTokensRequest) returns (GetQueueTokensReply);
}

message CreateQueueReply {
	int32 QueueId = 1;
}

message GetQueuesReply {
	repeated int32 QueueIds = 1;
}

message EnqueueRequest {
	int32 QueueId = 1;
}

message DequeueRequest {
	int32 QueueId = 1;
}

message GetQueueTokensRequest {
	int32 QueueId = 1;
}

message GetQueueTokensReply {
	repeated int32 Tokens = 1;
}